# oracle

./: requirements.txt  setup.cfg
quatloo/: manage.py
quatloo/qanda/: factory.py  models.py  parser.py  tests.py  views.py
quatloo/qanda/migrations/: 0001_initial.py
quatloo/qapi/: serializers.py  urls.py  views.py
quatloo/quatloo/: settings.py  urls.py  wsgi.py
