[metadata]
name = qualtoo
summary = Question and answer microservice for integration into helpdesks and chat systems
description-file =
    README.rst
author = Nicola Heald
author-email = nicola@notnowlewis.com
classifier =
    Intended Audience :: Information Technology
    Programming Language :: Python
    Programming Language :: Python :: 3

[pbr]
warnerrors = True
